Updates from Overleaf

--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -12,6 +12,7 @@ Below is a description of the compartmental model. We adapt the basic SEIR model
     \centering
     \input{model_diagram}
     \end{minipage}
+    \caption{Model diagram.}
 \end{figure}
 
 
