--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,7 @@
 
 %\renewcommand{\thesection}{\arabic{section}} % my attempt to get numbering not as decimals
 
-% \maketitle                  % create a title page 
+\maketitle                  % create a title page 
 \begin{romanpages}          % start roman page numbering
 \tableofcontents            % generate and include a table of contents
 % \listoffigures              % generate and include a list of figures
